tests/diagnostics/trait_missing_method.kal
# A trait impl must provide all of the trait's methods.
trait Shape { fn area(&self) -> i64; fn name(&self) -> i64; }
struct Sq { s: i64 }
impl Shape for Sq { fn area(&self) -> i64 = self.s * self.s; }
